feat: Add generate the html elements on the load of the window

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
     
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <ul id="todolist">
+      <h2>Today's To Do</h2>
+      
+    </ul>
     <script src="main.js"></script>
 </body>
 </html>
