feat: generate list in load and add new tasks

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
         <h1>Today's To Do</h1>
     </div>
     <div class="listElement">
-        <form action="#">
-            <input type="text" placeholder="Add to your list...">
+        <form action="#" id="addForm">
+            <input type="text" id="addTask" placeholder="Add to your list...">
         </form>
     </div>
     
