feat: add functionality of clear and check completed tasks

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     
     <ul id="todolist" class="listElement">
     </ul>
-    <button type="button" class="listElement">Clear all completed</button>
+    <button id="clear" type="button" class="listElement">Clear all completed</button>
     <script src="main.js"></script>
 </main>
 </body>
